Few more quotes

--- a/New HTML Doc.html
+++ b/New HTML Doc.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>my first document</title>
+        <title></title>
     </head>
     <body>
         <h1>A Short Story</h1>
@@ -14,6 +14,8 @@
             <q>To belittle, you have to be little.</q>
             <cite>Khalil Gibran</cite>
             <img src="file:///C:/Users/Aliyan/Pictures/hdhgu.png"/>
-        
+            <p><em>We choose our joy and sowrrows before we experience them.<em>></p>>
+            <strong><p>Beauty is not in the face, is a light in the heart!</p></strong>
+            <img src="file:///C:/Users/Aliyan/Pictures/asdf.png"/>
     </body>
 </html>
