updated web page

--- a/newnew.html
+++ b/newnew.html
@@ -5,7 +5,7 @@
     <style type="text/css">
       body {
         font-family: arial;
-        background-color: rgb(90, 65, 215);
+        background-color: rgb(185, 106, 17);
       }
     </style type="text/css">
   </head>
@@ -25,12 +25,13 @@
                 maxlength="30" />
             </p>
                 <p>Password:
-                    <input type="password" name="password" size="15"
+                    <input type="password" 
+                    name="password" size="15"
                         maxlength="30" />
                     </p>
                 </form>
                     <form action="http://www.example.com/comments.php">
-                        <p>What did you think of this gig?</p>
+                        <p>What did you think of this program?</p>
                         <textarea name="comments" cols="20" rows="4">Enter 
                                 your comments...</textarea> 
                             </form>
